--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,7 +2,5 @@
   "name": "inout",
   "app_id": "",
   "type": "ionic-angular",
-  "integrations": {
-    "cordova": {}
-  }
+  "integrations": {}
 }
