--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,17 +4,17 @@
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
-      "src": "assets/imgs/logo@3.png",
+      "src": "assets/imgs/logo@3x.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "assets/imgs/logo@3.png",
+      "src": "assets/imgs/logo@3x.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/imgs/logo@2.png",
+      "src": "assets/imgs/logo@2x.png",
       "sizes": "96x96",
       "type": "image/png"
     }
